--- a/src/PCDash_Main.f90.in
+++ b/src/PCDash_Main.f90.in
@@ -451,29 +451,16 @@
 !
       SUBROUTINE LaunchHelp
 
-      USE WINTERACTER
-      USE VARIABLES
 #ifdef _WIN32
       USE KERNEL32
       USE dfwinty
-#endif
- 
       IMPLICIT NONE
-
-      CHARACTER(MaxPathLength) WorkingDir
-
       INTEGER d
-
-      CALL IOsDirName(WorkingDir)
-
-     
-#ifdef _WIN32
-      CALL IOsDirChange(TRIM(DocumentationHTMLdirectory))      
-      d=WinExec('cmd /c "dash.html" 'C,SW_HIDE)
-      CALL IOsDirChange(TRIM(WorkingDir))
+      d=WinExec('cmd /c "start https://github.com/ccdc-opensource/dash/wiki" 'C,SW_HIDE)
 #else
-      CALL IOsCommand(TRIM(InstallationDirectory)//'nss.sh file://'// &
-                      TRIM(DocumentationHTMLdirectory)//DIRSPACER//'dash.html')
+      USE WINTERACTER
+      IMPLICIT NONE
+      CALL IOsCommand('xdg-open https://github.com/ccdc-opensource/dash/wiki')
 #endif
 
       END SUBROUTINE LaunchHelp
