Create MSI installer DASH-313

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,13 +16,18 @@ include(GNUInstallDirs)
 # Set up variables that will be replaced in source files
 set(DASH_VERSION ${CMAKE_PROJECT_VERSION})
 set(DASH_COPYRIGHT_YEAR "2021")
+set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
+set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
+set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
 
 # Configure CPack based package generation
-set(CPACK_PACKAGE_NAME "dash")
+set(CPACK_PACKAGE_NAME "DASH")
 set(CPACK_PACKAGE_VENDOR "The Cambridge Crystallographic Data Centre")
 set(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_CURRENT_SOURCE_DIR}/description.txt")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "A versatile and interactive package for solving crystal structures from powder diffraction data")
 set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.org/ccdc-opensource/dash")
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
+set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 if($ENV{BUILD_NUMBER})
     set(CPACK_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${DASH_VERSION}-$ENV{BUILD_NUMBER}-win32)
     set(CPACK_SOURCE_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${DASH_VERSION}-$ENV{BUILD_NUMBER})
@@ -31,15 +36,15 @@ else()
     set(CPACK_SOURCE_PACKAGE_FILE_NAME ${CPACK_PACKAGE_NAME}-${DASH_VERSION}-developer-build)
 endif()
 # set(CPACK_PACKAGE_INSTALL_DIRECTORY "")
-set(CPACK_PACKAGE_ICON icons/dash_128x128.png)
+set(CPACK_PACKAGE_ICON ${CMAKE_CURRENT_SOURCE_DIR}/distribution/share/icons/dash/dash.ico)
+set(CPACK_WIX_PRODUCT_ICON ${CMAKE_CURRENT_SOURCE_DIR}/distribution/share/icons/dash/dash.ico)
+set(CPACK_WIX_PROGRAM_MENU_FOLDER .)
 set(CPACK_PACKAGE_CHECKSUM SHA256)
-# set(CPACK_RESOURCE_FILE_LICENSE LICENSE)
-# set(CPACK_RESOURCE_FILE_README )
-# set(CPACK_RESOURCE_FILE_WELCOME)
 set(CPACK_MONOLITHIC_INSTALL TRUE)
 set(CPACK_PACKAGE_EXECUTABLES dash;DASH)
 set(CPACK_VERBATIM_VARIABLES TRUE)
-set(CPACK_GENERATOR "7Z")
+set(CPACK_WIX_UPGRADE_GUID "f45138d2-73a1-4f1b-9099-85ecadd4f86e")
+set(CPACK_GENERATOR "7Z;WIX")
 
 
 include(CPack)
