Remove need for dash_csd_connector exe NO_JIRA

--- a/src/variables.f90.in
+++ b/src/variables.f90.in
@@ -76,7 +76,8 @@
       INTEGER, PARAMETER :: cRECLMult = 1
 #endif
 
-      CHARACTER(MaxPathLength) :: VIEWEXE
+      CHARACTER(MaxPathLength) :: MercuryExecutable
+      CHARACTER(MaxPathLength) :: ViewerExecutable
       CHARACTER(20)            :: VIEWARG
       CHARACTER(MaxPathLength) :: MOGULEXE
       CHARACTER(MaxPathLength) :: DICVOLEXE
