--- a/src/PCDash_Main.f90.in
+++ b/src/PCDash_Main.f90.in
@@ -50,6 +50,8 @@
       INTEGER       tNumZMatrices
       CHARACTER(80) tZmatrices(10)
       INTEGER       tNextzmNum
+      INTEGER IERROR
+      CHARACTER(LEN=1000) :: tErrorMessage
 
 ! The following variables are there to allow the dialogue fields in the
 ! window dealing with Z-matrices to be handled by DO...ENDDO loops.
@@ -124,6 +126,13 @@
                         TITLE = "DASH", NCOL256=128)
 ! Load and display the toolbar
         CALL WMenuToolbar(ID_TOOLBAR1)
+
+        IERROR = WInfoError(1)
+        IF (IERROR/=0) THEN
+            CALL WInfoErrorMessage(IERROR,tErrorMessage)
+            CALL WMessageBox(OkOnly,InformationIcon,CommonOk,TRIM(tErrorMessage),'Error creating main toolbar')
+        END IF
+
         CALL WCursorShape(CurCrossHair)
 ! Disable the menu buttons
         CALL SetModeMenuState(1,-1)
