Fix resource compiling

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ project(DASH
   DESCRIPTION
     "DASH powder diffraction solution"
   LANGUAGES
-    Fortran
+    Fortran RC
 )
 
 include(FetchContent)
@@ -60,9 +60,9 @@ configure_file("${CMAKE_CURRENT_SOURCE_DIR}/src/variables.f90.in" "${CMAKE_CURRE
 set(DASH_RESOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/dash_gui_resources.rc)
 if(WIN32)
   set(WINTERACTER_ROOT "c:/wint" CACHE STRING "Location where winteracter is installed")
-  set(WINTERACTER_RC "${WINTERACTER_ROOT}/bin/rc.exe")
-  set(WINTERACTER_RC_ARGS "-i${WINTERACTER_ROOT}/include")
+  set(WINTERACTER_RC "${CMAKE_RC_COMPILER}")
   set(DASH_COMPILED_RESOURCE ${CMAKE_CURRENT_BINARY_DIR}/src/dash_gui_resources.obj)
+  set(WINTERACTER_RC_ARGS "/i${WINTERACTER_ROOT}/include" "/fo" "${DASH_COMPILED_RESOURCE}")
   if(${CMAKE_Fortran_COMPILER_ID} STREQUAL "Intel")
     if (${CMAKE_Fortran_COMPILER_ARCHITECTURE_ID} STREQUAL "x64")
       set(winteracter_LIBRARY_PATH ${WINTERACTER_ROOT}/lib.i64)
@@ -220,24 +220,25 @@ target_sources(
   # Resources
   # this file is generated from src/dash_gui_resources.rc but winteracter provide no way to generate it automatically
   src/dash_gui_resources.f90
-  ${DASH_COMPILED_RESOURCE}
+  src/dash_gui_resources.rc
+  # ${DASH_COMPILED_RESOURCE}
 )
-set_source_files_properties(
-  ${DASH_COMPILED_RESOURCE}
-  PROPERTIES
-  EXTERNAL_OBJECT true
-  GENERATED true
-)
-add_custom_command(
-  OUTPUT ${DASH_COMPILED_RESOURCE}
-  COMMAND ${WINTERACTER_RC} ${WINTERACTER_RC_ARGS} -o ${DASH_COMPILED_RESOURCE} ${DASH_RESOURCE}
-  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src
-  DEPENDS ${WINTERACTER_RC}
-  MAIN_DEPENDENCY ${DASH_RESOURCE}
-  VERBATIM
-  COMMAND_EXPAND_LISTS
-  COMMENT "Compiling resource ${DASH_RESOURCE}"
-)
+# set_source_files_properties(
+#   ${DASH_COMPILED_RESOURCE}
+#   PROPERTIES
+#   EXTERNAL_OBJECT true
+#   GENERATED true
+# )
+# add_custom_command(
+#   OUTPUT ${DASH_COMPILED_RESOURCE}
+#   COMMAND ${WINTERACTER_RC} ${WINTERACTER_RC_ARGS} ${DASH_RESOURCE}
+#   WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/src
+#   DEPENDS ${WINTERACTER_RC}
+#   MAIN_DEPENDENCY ${DASH_RESOURCE}
+#   VERBATIM
+#   COMMAND_EXPAND_LISTS
+#   COMMENT "Compiling resource ${DASH_RESOURCE}"
+# )
 
 # Installation section
 # Everything here is installed relative to the value of CMAKE_INSTALL_PREFIX (this is CMake's default behaviour)
