Get current executable full path on linux

--- a/src/variables.f90.in
+++ b/src/variables.f90.in
@@ -48,6 +48,7 @@
       CHARACTER(MaxPathLength) ::  FNAME
       DATA FNAME / ' ' /     ! Current filename
 
+      CHARACTER(MaxPathLength) ::  CurrentExecutableFullPath
       CHARACTER(MaxPathLength) ::  BinDirectory
       CHARACTER(MaxPathLength) ::  ShareDashDirectory
       CHARACTER(MaxPathLength) ::  DocumentationRoot
