Update linux required binaries NO_JIRA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -284,9 +284,11 @@ set(DASH_REQUIREMENTS_BUILD "332413")
 set(DASH_REQUIREMENTS_SHA256 "8752cdaca0cd549b2e9fbfa0931b5c98146adf4b6b2ff560f1a350fa5092bbcc")
 set(DASH_REQUIREMENTS_EXTENSION "7z")
 else()
+# set(DASH_REQUIREMENTS_GITHUB_RELEASE "4.0.0")
+set(DASH_REQUIREMENTS_BRANCH "main")
 set(DASH_REQUIREMENTS_PLATFORM "linux-64")
-set(DASH_REQUIREMENTS_BUILD "332411")
-set(DASH_REQUIREMENTS_SHA256 "900eddb44c2a9b699447f1a2347f8b4ad1bd614a19b8036267a0dd134812e556")
+set(DASH_REQUIREMENTS_BUILD "335532")
+set(DASH_REQUIREMENTS_SHA256 "e9a25a948bad6794c30b5ab6a0312b10e7dec929b7c3b83823825561b01c2d49")
 set(DASH_REQUIREMENTS_EXTENSION "tar.bz2")
 endif()
 FetchContent_Declare(
@@ -299,6 +301,7 @@ FetchContent_MakeAvailable(dash_requirements)
 install(
     DIRECTORY   "${dash_requirements_SOURCE_DIR}/"
     DESTINATION ${CMAKE_INSTALL_BINDIR}/zmconv
+    USE_SOURCE_PERMISSIONS
 )
 
 if(WIN32)
