Fix cmakefile NO_JIRA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt")
 set(CPACK_RESOURCE_FILE_README "${CMAKE_CURRENT_SOURCE_DIR}/README.md")
 if(WIN32)
   set(PACKAGE_PLATFORM "win32")
-elif(UNIX AND NOT APPLE)
+elseif(UNIX AND NOT APPLE)
   set(PACKAGE_PLATFORM "linux")
 endif()
 if($ENV{BUILD_NUMBER})
